--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="_3">3</string>
     <string name="bc">bc</string>
     <string name="_00">0</string>
+    <string name="total_bill">Total Bill</string>
+    <string name="_0_00_x_0">0.00 x 0</string>
+    <string name="__0_00">0.00</string>
+    <string name="__0">0</string>
+    <string name="item">item:</string>
+    <string name="empty">\</string>
 </resources>
